Changes for APR 1.2.9

  *) Improve thread safety of assorted file_io functions.
     PR 42400.  [Davi Arnaut <davi haxent.com.br>]

  *) Fix file pointer position calculation in apr_file_writev() on
     buffered file.  PR 40963.  [Davi Arnaut <davi haxent.com.br>]

  *) Fix formatting of unsigned integers larger than 2^63 in the
     vformatter/apr_*printf.  PR 42250.  
     [Wynn Wilkes <wynn bungeelabs.com>]

  *) Fix possible EFAULT failures in apr_socket_sendfile() on 32-bit
     Solaris with LFS enabled.  PR 39463.  [Joe Orton, Joseph Tam
     <tam math.ubc.ca>]

  *) Fix deadlock in apr_file_gets() for a file opened with both the
     APR_BUFFERED and APR_XTHREAD flags.  [Bojan Smojver, Joe Orton]

Changes for APR 1.2.8

  *) Correctly retrieve 'empty' environment values with apr_env_get
     on Win32 (e.g. "VAR="), and added validation to testall suite.  
     PR 40764.  [Issac Goldstand <margol beamartyr.net>]

  *) APR_FIND_APR macro no longer checks /usr/local/apache2/.
     PR 40842.  [Colm MacCarthaigh]

  *) Portably check for EEXIST in mktemp code.  PR 40818
     [Kenneth Golomb <KGolomb TradeCard.com>]

  *) Fix apr_snprintf/apr_vsnprintf return value to not count the
     NUL terminator in the overflow case.  PR 39996.
     [Michal Luczaj <regenrecht o2.pl>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Fix detection of pthread cross-process robust mutexes.
     PR 39833.  [Tsuyoshi SASAMOTO <nazonazo miobox.jp>]

  *) NetBSD: Avoid leaving zombie process when using apr_signal() 
     to ignore SIGCHLD.  PR 36750.  [Todd Vierling <tv pobox.com>]

  *) Fix apr_socket_sendv() for platforms without writev.
     PR 38822.  [Joe Orton]

  *) Avoid issues using >2Gb of data per call with sendfile() on
     64-bit Linux platforms.  [Joe Orton]

Changes for APR 1.2.7

  *) Netware - add missing apu_version.c parsing for apu_version_string()