@@ -42,7 +42,8 @@ APR_DECLARE(apr_status_t) apr_file_mktemp(apr_file_t **fp, char *template, apr_i
                             APR_UREAD | APR_UWRITE, p)) == APR_SUCCESS) {
 
         apr_pool_cleanup_register((*fp)->pool, (void *)(*fp),
-                                  apr_unix_file_cleanup, apr_unix_file_cleanup);
+                                  apr_unix_file_cleanup,
+                                  apr_unix_child_file_cleanup);
     }
 
     return rv;
